--- a/keepit.api/package.json
+++ b/keepit.api/package.json
@@ -7,7 +7,7 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage --forceExit"
   },
   "keywords": [],
   "author": "",
@@ -18,17 +18,28 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "express": "^5.2.1",
-    "jwt-simple": "^0.5.6"
+    "jwt-simple": "^0.5.6",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.6",
+    "@babel/preset-env": "^7.28.6",
+    "@babel/preset-typescript": "^7.28.5",
+    "@jest/globals": "^30.2.0",
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
     "@types/node": "^25.0.10",
+    "@types/supertest": "^6.0.3",
+    "babel-jest": "^30.2.0",
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "express-async-handler": "^1.2.0",
+    "jest": "^30.2.0",
     "prisma": "^7.3.0",
+    "supertest": "^7.2.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
