--- a/keepit.api/tsconfig.json
+++ b/keepit.api/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "target": "es2023",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
+    "types": ["jest", "node"],
     "module": "esnext",
-    "rootDir": "src",
     "outDir": "dist",
     "esModuleInterop": true,
     "sourceMap": true,
@@ -16,6 +16,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/**/*"],
   "exclude": ["node_modules"]
 }
